# pclaude

./: .gitignore  PRD-pclaude-v1.md  README.md  install.bat  install.ps1  install_alias.bat  install_alias.py  mock_claude.py  pyproject.toml  test_local.bat
docs/plans/: 2026-02-08-pclaude-implementation-plan.md
src/pclaude/: __init__.py  __main__.py  capture.py  cli.py  storage.py  utils.py
tests/: test_storage.py  test_utils.py
