[project]
name = "pclaude"
version = "0.1.0"
description = "Prompt archive for Claude Code CLI"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Sam Lam"}]
dependencies = [
    "typer>=0.12",
    "rich>=13",
]

[project.scripts]
pclaude = "pclaude.__main__:main"

[build-system]
requires = ["poetry-core>=1.0"]
build-backend = "poetry.core.masonry.api"
